Trying but still haven't been able to fix the close drawer issue on iOS.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -519,24 +519,29 @@ button:hover span.btn-icon { visibility: visible; opacity: 1; transform: transla
 .global-drawer {
   position: fixed;
   top: 0;
-  right: -400px;
+  right: 0;
   width: 400px;
   height: 100vh;
   max-height: 100vh;
   background-color: var(--popup-bg-color);
+  -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
   color: var(--ui-black);
   padding: 32px;
   box-shadow: var(--popup-box-shadow);
   z-index: 1003;
-  transition: right .3s ease;
+  -webkit-transition: -webkit-transform .3s ease;
+  transition: transform .3s ease;
+  -webkit-overflow-scrolling: touch;
   overflow-y: auto;
   font-size: 1em;
   font-family: var(--body-font);
   display: block;
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
   .references-link { justify-self: flex-end; margin: 1em 0; }
 }
-.global-drawer.open { right: 0; display: block; }
+.global-drawer.open { transform: translateX(0); display: block; -webkit-transform: translateX(0); }
 .global-drawer h3 { font-size: 1.3rem; margin-bottom: 10px; color: var(--ui-dark-gray); }
 .global-drawer pre { white-space: pre-wrap; margin: 0; font-family: var(--body-font); }
 .global-drawer ul { list-style-type: disc; margin: 0; padding-left: 20px; }
